# imgvwr

./: .gitignore  README.md  pyproject.toml
hdri_viewer/: __init__.py  app_icon.py  main.py  preferences.py
hdri_viewer/color/: __init__.py  ocio_manager.py  ocio_subprocess.py
hdri_viewer/io/: image_loader.py  subprocess_loader.py
hdri_viewer/resources/: config.ocio
hdri_viewer/resources/icons/: convert_app_icon.py
hdri_viewer/viewer/: __init__.py  camera.py  renderer.py  widget.py
hdri_viewer/viewer/shaders/: fragment_template.glsl
hdri_viewer/viewer/widget/: __init__.py  input_controls.py  loading.py  loading_controls.py  menu_controls.py  overlay_controls.py  progress_bar.py  toolbar_controls.py  toolbar_icons.py  toolbar_overlay.py  types.py  viewer_widget.py  window.py
tests/: test_camera.py  test_image_loader.py  test_loading_controls.py  test_ocio_manager.py  test_preferences.py
tools/: benchmark_ttf.py
